[package]
name = "lvgl_rust_sys"
version = "0.1.0"
edition = "2021"

[features]
default = ["use-string-functions"]
drivers = []
rust_timer = []
use-vendored-config = []
use-string-functions = []

[dependencies]


[build-dependencies]
bindgen = { version = "0.72.1", features = ["experimental"] }
cc = "1.1.18"
